--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,12 @@ footer{
     text-align: center;
 }
 
+ 
+
+div.disabled{
+	overflow-x: hidden; //horizontal
+}
+
 
 @media(max-width:550px){
    
