--- a/style.css
+++ b/style.css
@@ -18,7 +18,11 @@
 body {
   font-family: "Dosis", sans-serif;
   font-size: 16px;
-  color: #707070; }
+  color: #707070; 
+
+ max-width: 100%;
+    overflow-x: hidden;
+}
 
 h1,
 h2,
@@ -29,6 +33,8 @@ h6 {
   color: #303030;
   line-height: 1.3;
   font-weight: 500; }
+
+
 
 p {
   color: #707070;
